force-app/main/default/objects/Producer__c/Producer__c.object-meta.xml
<CustomObject>
    <label>Old Producer</label>
    <nameField>
        <label>Producer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Old Producers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>