force-app/main/default/objects/Producer__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <referenceTo>Agency__c</referenceTo>
    <relationshipLabel>Producers</relationshipLabel>
    <relationshipName>Producers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>