force-app/main/default/objects/Producer__c/fields/Producer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Producer_Phone__c</fullName>
    <label>Producer Phone</label>
    <type>Phone</type>
</CustomField>