force-app/main/default/objects/Producer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Producer_Phone__c</columns>
    <columns>Agent__c</columns>
    <columns>Producer_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>